@@ -1,5 +1,9 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
+o [NSE] Added omp2-brute and omp2-enum-targets, which respectively get
+  authentication credentials and then a list of scanning targets from
+  the OpenVAS Management Protocol. [Henri Doreau]
+
 o [NSE] Added backorifice-info from Gorjan Petrovski, which retrieves
   lots of system information from a BackOrifice server.
 
